--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="qrChallenge.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
-  Improve your front-end skills by building projects
+  <div id="card-qr">
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div id="qr-box">
+      <img
+        src="B:\Documents\CARLOS\FrontEnd Mentor Challenges\frontendMentorChallenges\qr-code-component-main\images\image-qr-code.png"
+        alt="qr" id="qr">
+    </div>
+
+    <div id="text-box">
+
+      <h1 id="title">Improve your font-end skills by building projects</h1>
+
+      <p id="text">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
+
+    </div>
+
   </div>
+
 </body>
+
+<footer>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Carlos Luengo</a>.
+  </div>
+
+</footer>
+
 </html>
