--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -1,49 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
+
+  <link rel="stylesheet"
+    href="B:\Documents\CARLOS\FrontEnd Mentor Challenges\frontendMentorChallenges\interactive-rating-component-main\interactiveRating.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
   <!-- Rating state start -->
+  <section id="rating">
+    <img
+      src="B:\Documents\CARLOS\FrontEnd Mentor Challenges\frontendMentorChallenges\interactive-rating-component-main\images\icon-star.svg"
+      alt="star">
 
-  How did we do?
+    <div id="text">
+      <h1>How did we do?</h1>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+      <p>Please let us know how we did with your support request. All feedback is appreciated
+        to help us improve our offering!</p>
+    </div>
 
-  1 2 3 4 5
+    <div id="numbers">
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+    </div>
+    <button>SUBMIT</button>
+  </section>
 
-  Submit
+
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
+  <section id="answer">
+    You selected
+    <!-- Add rating here --> out of 5
 
-  You selected <!-- Add rating here --> out of 5
+    Thank you!
 
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+    We appreciate you taking the time to give a rating. If you ever need more support,
+    don’t hesitate to get in touch!
+  </section>
 
   <!-- Thank you state end -->
 
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Carlos Luengo</a>.
   </div>
 </body>
+
 </html>
